# spatialCMC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
R/: .gitignore  install_rspatialcmc.sh  pois_reg_test.R
R/ArealData_Scenario1/: ArealData_Scenario1.R
R/ArealData_Scenario2/: ArealData_Scenario2.R  generate_clean_data.R  generate_plots.R  sensitivity_lambda.R  sensitivity_totalmass.R
R/ArealData_Scenario2/SensitivityAnalysis/scripts/: run_single_simulation.R  sensitivity_var_scaling.R  sensitivity_variance.R
R/ArealData_Scenario3/: ArealData_Scenario3.R
R/ArealData_Scenario4/: ArealData_Scenario4.R
R/ArealData_Scenario5/: ArealData_Scenario5.R
R/PoissonRegression/: pois_reg_test.R
R/RealData/: build_full_dataset.sh  run_simulation.sh
R/RealData/src/: build_full_dataset.R  post_inference.R  run_simulation.R
R/RspatialCMC/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  cleanup  configure
R/RspatialCMC/R/: build_spatialCMC.R  import_protobuf_message.R  run_cmc.R  run_mcmc.R  run_poisson_regression_cmc.R  run_poisson_regression_mcmc.R  sample_eppf.R  utils.R  zzz.R
R/RspatialCMC/inst/: RspatialCMC.Renviron
R/RspatialCMC/man/: build_spatialCMC.Rd  import_protobuf_messages.Rd  pois_reg_cmc.Rd  pois_reg_mcmc.Rd  read_mcmc_chain.Rd  relabel.Rd  run_cmc.Rd  run_mcmc.Rd  sample_eppf.Rd
R/SensitivityAnalysis/: cmc_sim_study.sh  mcmc_sim_study.sh
R/SensitivityAnalysis/scripts/: generate_plot.R  run_cmc.R  run_mcmc.R
R/SensitivityAnalysis_sPP/: generate_plot.sh  num_clust_trend.sh  run_sim_study.sh
R/SensitivityAnalysis_sPP/scripts/: aggregate_results.R  generate_plot.R  prior_num_cluster_estimate.R  run_simulation.R  sample_eppf_Nvarying.R
executables/: run_cmc.cc  run_mcmc.cc  run_poisreg_cmc.cc  run_poisreg_mcmc.cc
src/: CMakeLists.txt  shard.cc  shard.h  shard_merger.cc  shard_merger.h  shard_partition.cc  shard_partition.h  spatial_partition.cc  spatial_partition.h  spatialcmc_utils.h  utils.cc  utils.h
src/algorithm/: CMakeLists.txt  poisson_regression_sampler.cc  poisson_regression_sampler.h  sampler.cc  sampler.h
src/cmc/: CMakeLists.txt  local_cluster.cc  local_cluster.h  local_cluster_imp.h  local_cluster_merger.cc  local_cluster_merger.h  local_cluster_merger_imp.h  poisson_regression_local_cluster.cc  poisson_regression_local_cluster.h  poisson_regression_local_cluster_merger.cc  poisson_regression_local_cluster_merger.h  poisson_regression_shard.h  regression_coefficients_merger.cc  regression_coefficients_merger.h  shard_merger.cc  shard_merger.h  shard_partition.cc  shard_partition.h  spatialcmc_utils.cc  spatialcmc_utils.h
src/hierarchies/: CMakeLists.txt  empty_hierarchy.h  poisson_gamma_hierarchy.h  poisson_regression_hierarchy.h
src/hierarchies/likelihoods/: CMakeLists.txt  empty_likelihood.cc  empty_likelihood.h  empty_state.h  poisson_likelihood.cc  poisson_likelihood.h  poisson_regression_likelihood.cc  poisson_regression_likelihood.h
src/hierarchies/likelihoods/states/: CMakeLists.txt  empty_state.h  poisson_state.h
src/hierarchies/priors/: CMakeLists.txt  empty_prior_model.cc  empty_prior_model.h  gamma_prior_model.cc  gamma_prior_model.h
src/hierarchies/updaters/: CMakeLists.txt  empty_updater.cc  empty_updater.h  poisson_gamma_updater.cc  poisson_gamma_updater.h  poisson_regression_updater.cc  poisson_regression_updater.h
src/hierarchy/: CMakeLists.txt  gamma_prior_model.cc  gamma_prior_model.h  poisson_gamma_hierarchy.h  poisson_gamma_updater.cc  poisson_gamma_updater.h  poisson_likelihood.cc  poisson_likelihood.h
src/mixing/: CMakeLists.txt  spp_mixing.cc  spp_mixing.h
src/proto/: empty_hier.proto  mcmc_chain.proto  poisson_gamma_prior.proto  poisson_regression_algorithm_state.proto  poisson_state.proto  spp_prior.proto
test/: CMakeLists.txt  hierarchies.cc
